--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,13 @@
             <artifactId>liquibase-core</artifactId>
             <version>4.24.0</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.220</version>
+            <scope>runtime</scope>
+        </dependency>
 
     </dependencies>
 
