--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.liquibase.change-log=classpath:/liquibase/changelog-master.xml
 
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+telegram.bot.token=TELEGRAM_BOT_TOKEN
+telegram.bot.name=TELEGRAM_BOT_NAME
