--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 telegram.bot.token=TELEGRAM_BOT_TOKEN
 telegram.bot.name=TELEGRAM_BOT_NAME
+
+backorder.url=https://backorder.ru/json/?order=desc&expired=1&by=hotness&page=1&items=50
