--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ telegram.bot.token=TELEGRAM_BOT_TOKEN
 telegram.bot.name=TELEGRAM_BOT_NAME
 
 backorder.url=https://backorder.ru/json/?order=desc&expired=1&by=hotness&page=1&items=50
+
+logging.file.name=Bot.log
